--- a/fifteen.html
+++ b/fifteen.html
@@ -7,19 +7,18 @@
     <title>Fifteen Puzzle</title>
 
 
-    <script src="http://ajax.googleapis.com/ajax/libs/prototype/1.7.0.0/prototype.js"
-            type="text/javascript"></script>
-    <script src="http://www.cs.washington.edu/education/courses/cse190m/12sp/homework/7/grading.js"
-            type="text/javascript"></script>
-    <link href="puzzle.css" type="text/css" rel="stylesheet" />
-    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
+    <script src="http://ajax.googleapis.com/ajax/libs/prototype/1.7.0.0/prototype.js"></script>
+    <script src="http://www.cs.washington.edu/education/courses/cse190m/12sp/homework/7/grading.js"></script>
+    <link href="fifteen.css" type="text/css" rel="stylesheet" />
+
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>		
     <script src="js/jquery.min.js.download"></script>
-    <script src="puzzle.js" type="text/javascript"></script>
+    <script src="fifteen.js" ></script>
 
 </head>
 
 <body>
-<h1>CSE 190 M Fifteen Puzzle</h1>
+<h1>CSE 472 Fifteen Puzzle</h1>
 
 <p>
     The goal of the fifteen puzzle is to un-jumble its fifteen squares
@@ -37,6 +36,8 @@
 
 <p id="controls">
     <button id="shufflebutton">Shuffle</button>
+    <button id="changeImage">Change Image</button>
+
 </p>
 
 <p>
@@ -48,12 +49,16 @@
 </p>
 
 <div id="w3c">
-    <a href="https://webster.cs.washington.edu/validate-html.php">
-        <img src="https://webster.cs.washington.edu/w3c-html.png" alt="Valid HTML" /></a>
-    <a href="https://webster.cs.washington.edu/validate-css.php">
-        <img src="https://webster.cs.washington.edu/w3c-css.png" alt="Valid CSS" /></a>
-    <a href="https://webster.cs.washington.edu/jslint/?referer">
-        <img src="https://webster.cs.washington.edu/w3c-js.png" alt="Valid JS" /></a>
+  <a href="http://validator.w3.org/nu/?doc=https://musieyemane.github.io/hw9-puzzle/fifteen.html">
+    <img alt="Validate" src="images/w3c-html.png"/>
+</a>
+<a href="https://jigsaw.w3.org/css-validator/check/referer">
+    <img alt="Valid CSS!" src="images/w3c-css.png"/>
+</a>
+<a href="//cdnjs.cloudflare.com/ajax/libs/validate.js/0.13.1/validate.min.js">
+    <img src="images/w3c-js.png" alt="Valid Js" />
+</a>
 </div>
 </body>
 </html>
+
